--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,8 +1,8 @@
-$app-bg: #fff;
-$primary: #007bff;
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap");
+@import "./variables";
 
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   background: $app-bg;
 }
