--- a/src/styles/cart-bar.scss
+++ b/src/styles/cart-bar.scss
@@ -1,32 +1,34 @@
+@import "./variables";
+
 .cart-bar {
   background: #ff4d4f;
-  color: #fff;
-  padding: 0.75rem 1rem;
+  color: $text-color;
+  padding: 0.75em 1em;
   border-radius: 6px;
   text-align: center;
   position: absolute;
-  right: 0em;
+  right: 0;
   top: 3em;
   min-width: 19em;
 
   p {
-    margin: 0 0 0.5rem 0;
+    margin: 0 0 0.5em 0;
+    font-weight: 500;
   }
 
   .progress {
-    background: #d01d32;
+    background: $progress-bg;
     height: 6px;
     border-radius: 4px;
     overflow: hidden;
 
     .fill {
-      background: yellow;
+      background: $progress-fill;
       height: 100%;
       transition: width 0.3s ease;
     }
   }
 }
-
 @media (max-width: 768px) {
   .cart-bar {
     min-width: 12em;
