--- a/src/styles/product-card.scss
+++ b/src/styles/product-card.scss
@@ -1,9 +1,11 @@
+@import "./variables";
+
 .product-card {
-  border: 1px solid #eee;
+  border: 1px solid $border-color;
   border-radius: 0.5em;
-  padding: 0.5em;
+  padding: 0.75em;
+  background: $app-bg;
   text-align: center;
-  background: #fff;
 
   img {
     max-width: 100%;
@@ -11,20 +13,27 @@
     min-height: 12.5em;
   }
 
-  h4 {
-    font-size: 14px;
-    margin: 0.5rem 0;
+  .product-name {
+    min-height: 3.7em;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0;
+    text-align: left;
   }
 
-  p {
+  .product-price {
     font-weight: bold;
-    margin: 0.5rem 0;
+    margin: 0.5em 0;
+    text-align: left;
   }
 
   .add-btn {
-    background: #fff;
-    border: 1px solid #007bff;
-    color: #007bff;
+    background: $app-bg;
+    border: 1px solid $primary-btn-color;
+    color: $primary-btn-color;
     padding: 0.75em 1em;
     border-radius: 2em;
     cursor: pointer;
@@ -36,15 +45,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid #e0e0e0;
+    border: 1px solid $border-color;
     border-radius: 2em;
-    padding: 0.25rem 0.5rem;
-    background: #fff;
+    padding: 0.25em;
+    background: $app-bg;
 
     .qty-btn {
       background: #e6f0ff;
       border: none;
-      color: #007bff;
+      color: $primary-btn-color;
       font-size: 18px;
       width: 27px;
       height: 27px;
