--- a/src/styles/product-list.scss
+++ b/src/styles/product-list.scss
@@ -1,10 +1,11 @@
 .product-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1.5em;
   padding: 1em;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
+  min-height: 34vh;
 
   .not-found {
     grid-column: 1 / -1;
